--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -15,6 +15,6 @@ jobs:
       - name: git status
         run: |
           cd src
-          wget https://raw.githubusercontent.com/abap-openapi/generated-github/main/zif_githubcom.intf.abap
-          wget https://raw.githubusercontent.com/abap-openapi/generated-github/main/zcl_githubcom.clas.abap
+          wget -O zif_githubcom.intf.abap https://raw.githubusercontent.com/abap-openapi/generated-github/main/zif_githubcom.intf.abap
+          wget -O zcl_githubcom.clas.abap https://raw.githubusercontent.com/abap-openapi/generated-github/main/zcl_githubcom.clas.abap
           git status
