--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -18,3 +18,7 @@ jobs:
           wget -O zif_githubcom.intf.abap https://raw.githubusercontent.com/abap-openapi/generated-github/main/zif_githubcom.intf.abap
           wget -O zcl_githubcom.clas.abap https://raw.githubusercontent.com/abap-openapi/generated-github/main/zcl_githubcom.clas.abap
           git status
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v3
+        with:
+          title: Update Github API
