--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -21,3 +21,4 @@ jobs:
         uses: peter-evans/create-pull-request@v3
         with:
           title: Update Github API
+          branch: updgithub
